Support compile and clean targets, remove unnecessary compilation code in examples that are showing errors.

--- a/tutorial/training/users/Makefile
+++ b/tutorial/training/users/Makefile
@@ -34,8 +34,16 @@
 # Author: J. Henrichs, Bureau of Meteorology
 
 
+.PHONY: test compile clean allclean
+
 test:
 	$(MAKE) -C lfric test
 
 compile:
 	$(MAKE) -C lfric compile
+
+clean:
+	$(MAKE) -C lfric clean
+
+allclean:
+	$(MAKE) -C lfric allclean
