#2132 Increase number of workers in the compilation workflow

--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -55,6 +55,7 @@ env:
   GFORTRAN_VERSION: 13.2.0
   NVFORTRAN_VERSION: 23.7
   CUDA_VERSION: 12.2
+  MAKEFLAGS: "-j 6"
 
 jobs:
   run_if_on_mirror:
@@ -90,7 +91,7 @@ jobs:
         module load python/${PYTHON_VERSION}
         . .runner_venv/bin/activate
         module load gcc/${GFORTRAN_VERSION} openmpi netcdf_fortran
-        pytest -n 2 --f90=gfortran --compile --compileopencl src/psyclone/tests
+        pytest -n 6 --f90=gfortran --compile --compileopencl src/psyclone/tests
         module rm netcdf_fortran gcc
     - name: Unit tests with compilation - nvfortran
       run: |
@@ -98,7 +99,7 @@ jobs:
         . .runner_venv/bin/activate
         module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         # We have to tell nvfortran where to find the OpenCL library.
-        pytest -n 2 --f90=nvfortran --f90flags="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" --compile --compileopencl src/psyclone/tests
+        pytest -n 6 --f90=nvfortran --f90flags="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" --compile --compileopencl src/psyclone/tests
         module rm netcdf_fortran nvidia-hpcsdk
     - name: Examples with compilation - gfortran
       run: |
