--- a/.github/workflows/nemo_tests.yml
+++ b/.github/workflows/nemo_tests.yml
@@ -108,10 +108,10 @@ jobs:
           echo -n ${newresults:2:-1}
           printf '"}}}'
         }| curl -L -X PATCH \
-             -H "Accept: application/vnd.github+json"
-             -H "Authorization: Bearer ${{ secrets.GIST_TOKEN }}"
-             -H "X-GitHub-Api-Version: 2022-11-28"
-             https://api.github.com/gists/a4049a0fc0a0a11651a5ce6a04d76160
+             -H "Accept: application/vnd.github+json" \
+             -H "Authorization: Bearer ${{ secrets.GIST_TOKEN }}" \
+             -H "X-GitHub-Api-Version: 2022-11-28" \
+             https://api.github.com/gists/a4049a0fc0a0a11651a5ce6a04d76160 \
              --data-binary @-
 
     # PSyclone, compile and run MetOffice NEMO with OpenACC kernels for GPUs
@@ -134,6 +134,18 @@ jobs:
         tail -n 1 output.txt | grep -q "S_max:  0.407622"
         grep -A 1 "Elapsed Time" output.txt
         echo  $GITHUB_REF_NAME $GITHUB_SHA $(grep -A 1 "Elapsed Time" output.txt | head -n 2 | tail -n 1) >> ${NEMO_DIR}/performance_history_openacc_kernels_gpu
+        # Upload the results into a Github Gist
+        newresults=$(printf "%q" "$(cat ${NEMO_DIR}/performance_history_openacc_kernels_gpu)")
+        {
+          printf '{"description":"New NEMO OpenACC GPU results","files":{"nemo_openacc_kernels_gpu.txt":{"content":"'
+          echo -n ${newresults:2:-1}
+          printf '"}}}'
+        }| curl -L -X PATCH \
+             -H "Accept: application/vnd.github+json" \
+             -H "Authorization: Bearer ${{ secrets.GIST_TOKEN }}" \
+             -H "X-GitHub-Api-Version: 2022-11-28" \
+             https://api.github.com/gists/a4049a0fc0a0a11651a5ce6a04d76160 \
+             --data-binary @-
 
     # PSyclone, compile and run ECMWF NEMO with OpenMP for CPUs
     - name: NEMO ECMWF OpenMP for CPU
@@ -163,3 +175,15 @@ jobs:
         tail -n 1 output.txt | grep -q "S_max:  0.404045"
         grep -A 1 "Elapsed Time" output.txt
         echo  $GITHUB_REF_NAME $GITHUB_SHA $(grep -A 1 "Elapsed Time" output.txt | head -n 2 | tail -n 1) >> ${NEMO_DIR}/performance_history_openmp_cpu
+        # Upload the results into a Github Gist
+        newresults=$(printf "%q" "$(cat ${NEMO_DIR}/performance_history_openmp_cpu)")
+        {
+          printf '{"description":"New NEMO OpenMP CPU results","files":{"nemo_openmp_cpu.txt":{"content":"'
+          echo -n ${newresults:2:-1}
+          printf '"}}}'
+        }| curl -L -X PATCH \
+             -H "Accept: application/vnd.github+json" \
+             -H "Authorization: Bearer ${{ secrets.GIST_TOKEN }}" \
+             -H "X-GitHub-Api-Version: 2022-11-28" \
+             https://api.github.com/gists/a4049a0fc0a0a11651a5ce6a04d76160 \
+             --data-binary @-
