--- a/doc/developer_guide/.readthedocs.yaml
+++ b/doc/developer_guide/.readthedocs.yaml
@@ -59,6 +59,7 @@ sphinx:
 # need to install the PSyclone package.
 python:
    install:
+     - requirements: pip_requirements.txt
      - method: pip
        path: .
        extra_requirements:
