#2132 Revert workflow changes that cause issues

--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -55,7 +55,6 @@ env:
   GFORTRAN_VERSION: 13.2.0
   NVFORTRAN_VERSION: 23.7
   CUDA_VERSION: 12.2
-  MAKEFLAGS: "-j 6"
 
 jobs:
   run_if_on_mirror:
@@ -91,7 +90,7 @@ jobs:
         module load python/${PYTHON_VERSION}
         . .runner_venv/bin/activate
         module load gcc/${GFORTRAN_VERSION} openmpi netcdf_fortran
-        pytest -n 6 --f90=gfortran --f90flags="-ffree-line-length-none" --compile --compileopencl src/psyclone/tests
+        pytest -n 4 --f90=gfortran --f90flags="-ffree-line-length-none" --compile --compileopencl src/psyclone/tests
         module rm netcdf_fortran gcc
     - name: Unit tests with compilation - nvfortran
       run: |
@@ -99,7 +98,7 @@ jobs:
         . .runner_venv/bin/activate
         module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         # We have to tell nvfortran where to find the OpenCL library.
-        pytest -n 6 --f90=nvfortran --f90flags="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" --compile --compileopencl src/psyclone/tests
+        pytest -n 4 --f90=nvfortran --f90flags="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" --compile --compileopencl src/psyclone/tests
         module rm netcdf_fortran nvidia-hpcsdk
     - name: Examples with compilation - gfortran
       run: |
@@ -109,7 +108,7 @@ jobs:
         # Although we're using gfortran, we link with the OpenCL lib that comes
         # with CUDA.
         make -C examples allclean
-        F90=gfortran F90FLAGS="-ffree-line-length-none -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" make -C examples compile
+        F90=gfortran F90FLAGS="-ffree-line-length-none -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" make -j 4 -C examples compile
     - name: Tutorials with compilation - gfortran
       run: |
         module load python/${PYTHON_VERSION}
@@ -124,7 +123,7 @@ jobs:
         make -C examples allclean
         module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         # We have to tell nvfortran where to find the OpenCL library.
-        F90=nvfortran F90FLAGS="-acc -Minfo=all -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" make -C examples compile
+        F90=nvfortran F90FLAGS="-acc -Minfo=all -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" make -j 4 -C examples compile
     - name: Tutorials with compilation - nvfortran
       run: |
         module load python/${PYTHON_VERSION}
@@ -133,4 +132,4 @@ jobs:
         module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         # TODO #2251. Cannot build the LFRic practicals with 23.5/7 of nvfortran
         # because the compilation of nan_test.f90 gives an ICE.
-        F90=nvfortran F90FLAGS="-acc -Minfo=all" make -C tutorial/practicals/nemo compile
+        F90=nvfortran F90FLAGS="-acc -Minfo=all" make -j 4 -C tutorial/practicals/nemo compile
