--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -108,7 +108,7 @@ jobs:
         # Although we're using gfortran, we link with the OpenCL lib that comes
         # with CUDA.
         make -C examples allclean
-        F90=gfortran F90FLAGS="-ffree-line-length-none -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" make -j 4 -C examples compile
+        F90=gfortran F90FLAGS="-ffree-line-length-none -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" make -C examples compile
     - name: Tutorials with compilation - gfortran
       run: |
         module load python/${PYTHON_VERSION}
@@ -123,7 +123,7 @@ jobs:
         make -C examples allclean
         module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         # We have to tell nvfortran where to find the OpenCL library.
-        F90=nvfortran F90FLAGS="-acc -Minfo=all -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" make -j 4 -C examples compile
+        F90=nvfortran F90FLAGS="-acc -Minfo=all -L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/${NVFORTRAN_VERSION}/cuda/${CUDA_VERSION}/targets/x86_64-linux/lib" make -C examples compile
     - name: Tutorials with compilation - nvfortran
       run: |
         module load python/${PYTHON_VERSION}
@@ -132,4 +132,4 @@ jobs:
         module load nvidia-hpcsdk/${NVFORTRAN_VERSION} netcdf_fortran
         # TODO #2251. Cannot build the LFRic practicals with 23.5/7 of nvfortran
         # because the compilation of nan_test.f90 gives an ICE.
-        F90=nvfortran F90FLAGS="-acc -Minfo=all" make -j 4 -C tutorial/practicals/nemo compile
+        F90=nvfortran F90FLAGS="-acc -Minfo=all" make -C tutorial/practicals/nemo compile
