--- a/examples/lfric/scripts/Makefile
+++ b/examples/lfric/scripts/Makefile
@@ -36,7 +36,8 @@
 
 include ../../common.mk
 
-# Get all python scripts in this folder excluding the compare_output.py script
+# Get all psyclone scripts in this folder, which are all python files excluding
+# the compare_output.py script
 SCRIPTS = $(filter-out compare_ouput.py, $(wildcard *.py))
 
 transform: ${SCRIPTS}
