--- a/.github/workflows/lfric_test.yml
+++ b/.github/workflows/lfric_test.yml
@@ -45,6 +45,8 @@ jobs:
   run_if_on_mirror:
     if: ${{ github.repository == 'stfc/PSyclone-mirror' }}
     runs-on: self-hosted
+    env:
+      LFRIC_REV: 45376
 
     steps:
     - uses: actions/checkout@v3
@@ -85,10 +87,10 @@ jobs:
         export FFLAGS="-I$(spack location -e lfric-gnu)/.spack-env/view/include"
         export LDFLAGS="-L$(spack location -e lfric-gnu)/.spack-env/view/lib"
         export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$(spack location -e lfric-gnu)/.spack-env/view/lib"
-        export LD_LIBRARY_PATH="$LD_LIBRARY_PATH::$(spack location -e lfric-gnu)/.spack-env/view/lib64"
+        export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$(spack location -e lfric-gnu)/.spack-env/view/lib64"
         source .runner_venv/bin/activate
         export PSYCLONE_LFRIC_DIR=${GITHUB_WORKSPACE}/examples/lfric/scripts
-        export MINIAPP_DIR=${HOME}/LFRic_45376/miniapps/gungho_model
+        export MINIAPP_DIR=${HOME}/LFRic_${LFRIC_REV}/miniapps/gungho_model
         export PSYCLONE_CONFIG=${HOME}/lfric_psyclone_config.cfg
         cd ${MINIAPP_DIR}
         # Compile
@@ -102,19 +104,14 @@ jobs:
         cat timer.txt
         export VAR_TIME=$(grep "gungho_model" timer.txt | cut -d'|' -f5)
         export VAR_HALOS=$(grep "gungho_model" halo_calls_counter.txt | cut -d'|' -f5)
-        echo $GITHUB_REF_NAME $GITHUB_SHA $VAR_TIME $VAR_HALOS >> ${HOME}/lfric_passthrough_performance_history
-        # Upload the results into a Github Gist
-        newresults=$(printf "%q" "$(cat ${HOME}/lfric_passthrough_performance_history)")
-        {
-          printf '{"description":"New LFRic results","files":{"lfric_passthrough.txt":{"content":"'
-          echo -n ${newresults:2:-1}
-          printf '"}}}'
-        }| curl -L -X PATCH \
-             -H "Accept: application/vnd.github+json" \
-             -H "Authorization: Bearer ${{ secrets.GIST_TOKEN }}" \
-             -H "X-GitHub-Api-Version: 2022-11-28" \
-             https://api.github.com/gists/a4049a0fc0a0a11651a5ce6a04d76160 \
-             --data-binary @-
+        echo $GITHUB_REF_NAME $GITHUB_SHA $VAR_TIME $VAR_HALOS >> ${HOME}/store_results/lfric_passthrough_performance_history
+
+    - name: Upload LFRic passthrough results
+      uses: exuanbo/actions-deploy-gist@v1
+      with:
+        token: ${{ secrets.GIST_TOKEN }}
+        gist_id: a4049a0fc0a0a11651a5ce6a04d76160
+        file_path: ../../../../store_results/lfric_passthrough_performance_history
 
     # PSyclone, compile and run MetOffice LFRic with all optimisations and 6 OpenMP threads
     - name: LFRic with all transformations
@@ -133,7 +130,7 @@ jobs:
         export LD_LIBRARY_PATH="$LD_LIBRARY_PATH::$(spack location -e lfric-gnu)/.spack-env/view/lib64"
         source .runner_venv/bin/activate
         export PSYCLONE_LFRIC_DIR=${GITHUB_WORKSPACE}/examples/lfric/scripts
-        export MINIAPP_DIR=${HOME}/LFRic_45376/miniapps/gungho_model
+        export MINIAPP_DIR=${HOME}/LFRic_${LFRIC_REV}/miniapps/gungho_model
         export PSYCLONE_CONFIG=${HOME}/lfric_psyclone_config.cfg
         cd ${MINIAPP_DIR}
         # Prepare script (LFRics expects a folder with a global.py)
@@ -151,16 +148,11 @@ jobs:
         cat timer.txt
         export VAR_TIME=$(grep "gungho_model" timer.txt | cut -d'|' -f5)
         export VAR_HALOS=$(grep "gungho_model" halo_calls_counter.txt | cut -d'|' -f5)
-        echo $GITHUB_REF_NAME $GITHUB_SHA $VAR_TIME $VAR_HALOS >> ${HOME}/lfric_optimised_performance_history
-        # Upload the results into a Github Gist
-        newresults=$(printf "%q" "$(cat ${HOME}/lfric_optimised_performance_history)")
-        {
-          printf '{"description":"New LFRic results","files":{"lfric_optimised.txt":{"content":"'
-          echo -n ${newresults:2:-1}
-          printf '"}}}'
-        }| curl -L -X PATCH \
-             -H "Accept: application/vnd.github+json" \
-             -H "Authorization: Bearer ${{ secrets.GIST_TOKEN }}" \
-             -H "X-GitHub-Api-Version: 2022-11-28" \
-             https://api.github.com/gists/a4049a0fc0a0a11651a5ce6a04d76160 \
-             --data-binary @-
+        echo $GITHUB_REF_NAME $GITHUB_SHA $VAR_TIME $VAR_HALOS >> ${HOME}/store_results/lfric_optimised_performance_history
+
+    - name: Upload LFRic optimised results
+      uses: exuanbo/actions-deploy-gist@v1
+      with:
+        token: ${{ secrets.GIST_TOKEN }}
+        gist_id: a4049a0fc0a0a11651a5ce6a04d76160
+        file_path: ../../../../store_results/lfric_optimised_performance_history
