--- a/.github/workflows/nemo_tests.yml
+++ b/.github/workflows/nemo_tests.yml
@@ -81,6 +81,17 @@ jobs:
         cd lib/profiling/nvidia/
         F90=nvfortran make
 
+    # PSyclone passthrough for MetOffice NEMO
+    - name: NEMO MetOffice Passthrough
+      run: |
+        source .runner_venv/bin/activate
+        export PSYCLONE_NEMO_DIR=${GITHUB_WORKSPACE}/examples/nemo/scripts
+        export NEMO_DIR=${HOME}/NEMO
+        cd examples/nemo/scripts
+        make -j 4 passthrough
+        module load nvidia-hpcsdk netcdf_fortran
+        make -j 4 compile-passthrough
+
     # PSyclone, compile and run MetOffice NEMO with OpenMP for GPUs
     - name: NEMO MetOffice OpenMP for GPU
       run: |
