--- a/examples/nemo/scripts/Makefile
+++ b/examples/nemo/scripts/Makefile
@@ -58,7 +58,7 @@ $(TARGETS): % : $(addprefix psycloned-%/, $(notdir $(SRC_FILES)))
 	@echo "Finished generating $@"
 
 # PSyclone instructions for each target type
-psycloned-passthrough/%.f90: ${ROOT_SRC}%.f90 psycloned-passthough
+psycloned-passthrough/%.f90: ${ROOT_SRC}%.f90 psycloned-passthrough
 	${PSYCLONE_NEMO_DIR}/passthrough.py -I ${ROOT_SRC} -o psycloned-passthrough $<
 psycloned-openmp_cpu/%.f90: ${ROOT_SRC}%.f90 psycloned-openmp_cpu
 	${PSYCLONE_NEMO_DIR}/process_nemo.py -s ${PSYCLONE_NEMO_DIR}/omp_cpu_trans.py -I ${ROOT_SRC} -o psycloned-openmp_cpu $<
