#2357 Fix acc_kernel_trans.py references

--- a/examples/nemo/eg3/Makefile
+++ b/examples/nemo/eg3/Makefile
@@ -80,10 +80,10 @@ kernels:
 # TODO #852 - simplify that script and merge it with the functionality of
 # the scripts in this directory.
 managed_mem:
-	${PSYCLONE} -l all -api "nemo" -s ../scripts/kernels_trans.py \
+	${PSYCLONE} -l all -api "nemo" -s ../scripts/acc_kernels_trans.py \
    ../code/tra_adv.F90
 	PSYCLONE="${PSYCLONE}" ../scripts/process_nemo.py \
-   -s ../scripts/kernels_trans.py ../code/traldf_iso.F90
+   -s ../scripts/acc_kernels_trans.py ../code/traldf_iso.F90
 
 # Compilation uses the 'kernels' transformed code
 psy.f90: kernels
