--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -133,7 +133,7 @@ jobs:
         # If you wish to install the version of fparser pointed to by the
         # submodule instead of the released version (from PyPI) then
         # uncomment the following line:
-        # pip install external/fparser
+        pip install external/fparser
         pip install .[test]
     - name: Lint with flake8
       run: |
