#1941 Added like-for-like functionality for precision map from Config where LFRicConstants.PRECISION_MAP used

--- a/config/psyclone.cfg
+++ b/config/psyclone.cfg
@@ -35,7 +35,7 @@
 # Modified by: R. W. Ford, STFC Daresbury Laboratory
 #              S. Siso, STFC Daresbury Laboratory
 #              J. Henrichs, Bureau of Meteorology,
-#              I. Kavcic, Met Office
+#              I. Kavcic and O. Brunt, Met Office
 
 # This is the PSyclone configuration file.
 
